fixed dropdown alignment

--- a/src/main/css/nav.css
+++ b/src/main/css/nav.css
@@ -59,7 +59,7 @@ nav > ul {
 
 .nav-menu-content li {
     width: 300px;
-    padding: 6px 6px 6px 36px;
+    padding: 6px 6px 6px 18px;
     box-sizing: border-box;
 }
 
